--- a/k8s/helm/templates/externalSecrets.yaml
+++ b/k8s/helm/templates/externalSecrets.yaml
@@ -12,14 +12,7 @@ spec:
     # note this was before rcsb-idmapper-env-vars
     name: {{ include "helm_chart.fullname" . }}-secret
   data:
-    # TODO switch to use mongo_databases/admin_accounts (see yosemite) when we have in-k8s DW
-    - secretKey: mongodb_user
-      remoteRef:
-        key: parks/production
-        property: idmapper.mongodb.user
     - secretKey: mongodb_pwd
       remoteRef:
-        key: parks/production
-        property: idmapper.mongodb.pwd
-
-
+        key: mongo_databases/admin_accounts
+        property: {{ .Values.idMapperAppProperties.mongoDwUser }}
