--- a/k8s/helm/values.yaml
+++ b/k8s/helm/values.yaml
@@ -143,7 +143,7 @@ resources: {}
 
 idMapperAppProperties:
   # mongoDwUser is the MongoDB DataWarehouse user name
-  mongoDwUser: readonly
+  mongoDwUser: updater
   # mongoDbUri the MongoDB URI pointing to DataWarehouse. Must have 2 %s placeholders for user/pwd
   mongoDbUri:
     a:
