--- a/k8s/helm/values.yaml
+++ b/k8s/helm/values.yaml
@@ -89,45 +89,39 @@ ingress:
     cert-manager.io/cluster-issuer: rutgers-acme
     # The non-UCSD/Rutgers subnets are for NS1 monitors
     haproxy.org/allow-list: >-
-      "128.6.158.0/23, 132.249.210.0/24, 132.249.213.0/24, 163.114.226.0/24, 163.114.225.0/24, 
-      209.177.156.77/32, 147.75.68.120/29, 163.114.227.0/24, 163.114.228.0/24, 163.114.224.0/24, 147.75.66.200/29"
+      128.6.158.0/23, 132.249.210.0/24, 132.249.213.0/24, 163.114.226.0/24, 163.114.225.0/24,
+      209.177.156.77/32, 147.75.68.120/29, 163.114.227.0/24, 163.114.228.0/24, 163.114.224.0/24, 147.75.66.200/29,
+      163.114.230.0/24, 163.114.232.0/24
   kubernetes.io/tls-acme: "true"
-  hostsA:
-    - host: idmapper-a.east.k8s.rcsb.org
+  hosts:
+    - host: idmapper.rcsb.org
       paths:
         - path: /
           pathType: ImplementationSpecific
-    - host: idmapper-a.west.k8s.rcsb.org
+    - host: idmapper-west.rcsb.org
       paths:
         - path: /
           pathType: ImplementationSpecific
-    - host: idmapper-a.rcsb.org
+    - host: idmapper-east.rcsb.org
       paths:
         - path: /
           pathType: ImplementationSpecific
-  hostsB:
-    - host: idmapper-b.east.k8s.rcsb.org
+    - host: idmapper.west.k8s.rcsb.org
       paths:
         - path: /
           pathType: ImplementationSpecific
-    - host: idmapper-b.west.k8s.rcsb.org
-      paths:
-        - path: /
-          pathType: ImplementationSpecific
-    - host: idmapper-b.rcsb.org
+    - host: idmapper.east.k8s.rcsb.org
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls:
     secretName: rcsb-idmapper-tls
-    hostsA:
-      - idmapper-a.east.k8s.rcsb.org
-      - idmapper-a.west.k8s.rcsb.org
-      - idmapper-a.rcsb.org
-    hostsB:
-      - idmapper-b.east.k8s.rcsb.org
-      - idmapper-b.west.k8s.rcsb.org
-      - idmapper-b.rcsb.org
+    hosts:
+      - idmapper.rcsb.org
+      - idmapper-west.rcsb.org
+      - idmapper-east.rcsb.org
+      - idmapper.west.k8s.rcsb.org
+      - idmapper.east.k8s.rcsb.org
 
 # Define resource limits for your application. Especially important if you enable autoscaling for this Helm chart.
 # Deploy without limits first to test the application performance, then tune afterwards to ensure that autoscaling
