--- a/k8s/helm/templates/ingress.yaml
+++ b/k8s/helm/templates/ingress.yaml
@@ -1,64 +1,61 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "helm_chart.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
-{{- $labels := include "helm_chart.labels" . | nindent 4 }}
-{{- range $path := tuple "a" "b" }}
----
+{{- if and .Values.ingress.className (not (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion)) }}
+  {{- if not (hasKey .Values.ingress.annotations "kubernetes.io/ingress.class") }}
+  {{- $_ := set .Values.ingress.annotations "kubernetes.io/ingress.class" .Values.ingress.className}}
+  {{- end }}
+{{- end }}
+{{- if semverCompare ">=1.19-0" .Capabilities.KubeVersion.GitVersion -}}
 apiVersion: networking.k8s.io/v1
+{{- else if semverCompare ">=1.14-0" .Capabilities.KubeVersion.GitVersion -}}
+apiVersion: networking.k8s.io/v1beta1
+{{- else -}}
+apiVersion: extensions/v1beta1
+{{- end }}
 kind: Ingress
 metadata:
-  name: {{ $fullName }}-{{ $path }}
+  name: {{ $fullName }}
   labels:
-    {{- $labels }}
-  {{- with $.Values.ingress.annotations }}
+    {{- include "helm_chart.labels" . | nindent 4 }}
+  {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-  ingressClassName: {{ $.Values.ingress.className }}
+  {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- end }}
+  {{- if .Values.ingress.tls }}
   tls:
+    {{- range .Values.ingress.tls }}
     - hosts:
-      {{- if eq $path "a" }}
-      {{- range $.Values.ingress.tls.hostsA }}
-      - {{ . }}
-      {{- end }}
-      {{ else }}
-      {{- range $.Values.ingress.tls.hostsB }}
-      - {{ . }}
-      {{- end }}
-      {{- end }}
-      secretName: {{ $.Values.ingress.tls.secretName }}-{{ $path }}
+        {{- range .hosts }}
+        - {{ . | quote }}
+        {{- end }}
+      secretName: {{ .secretName }}
+    {{- end }}
+  {{- end }}
   rules:
-    {{- if eq $path "a" }}
-    {{- range $.Values.ingress.hostsA }}
+    {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
       http:
         paths:
           {{- range .paths }}
           - path: {{ .path }}
+            {{- if and .pathType (semverCompare ">=1.18-0" $.Capabilities.KubeVersion.GitVersion) }}
             pathType: {{ .pathType }}
+            {{- end }}
             backend:
+              {{- if semverCompare ">=1.19-0" $.Capabilities.KubeVersion.GitVersion }}
               service:
-                name: {{ $fullName }}-{{ $path }}
+                name: {{ $fullName }}
                 port:
                   number: {{ $svcPort }}
+              {{- else }}
+              serviceName: {{ $fullName }}
+              servicePort: {{ $svcPort }}
+              {{- end }}
           {{- end }}
     {{- end }}
-    {{ else }}
-    {{- range $.Values.ingress.hostsB }}
-    - host: {{ .host | quote }}
-      http:
-        paths:
-          {{- range .paths }}
-          - path: {{ .path }}
-            pathType: {{ .pathType }}
-            backend:
-              service:
-                name: {{ $fullName }}-{{ $path }}
-                port:
-                  number: {{ $svcPort }}
-          {{- end }}
-    {{- end }}
-    {{- end }}
-{{- end }}
 {{- end }}
