Adjust ingress values

--- a/k8s/helm/values.yaml
+++ b/k8s/helm/values.yaml
@@ -83,16 +83,16 @@ service:
 # ingress declares the Ingress resource to be created and allow access to the service from the external internet.
 # Set ingress.enabled to true to create this Ingress resource. Double-check the host values for your application.
 ingress:
-  enabled: false
-  className: "haproxy"
+  enabled: true
+  className: haproxy
   annotations:
     cert-manager.io/cluster-issuer: rutgers-acme
+    kubernetes.io/tls-acme: "true"
     # The non-UCSD/Rutgers subnets are for NS1 monitors
     haproxy.org/allow-list: >-
       128.6.158.0/23, 132.249.210.0/24, 132.249.213.0/24, 163.114.226.0/24, 163.114.225.0/24,
       209.177.156.77/32, 147.75.68.120/29, 163.114.227.0/24, 163.114.228.0/24, 163.114.224.0/24, 147.75.66.200/29,
       163.114.230.0/24, 163.114.232.0/24
-  kubernetes.io/tls-acme: "true"
   hosts:
     - host: idmapper.rcsb.org
       paths:
@@ -115,13 +115,13 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
   tls:
-    secretName: rcsb-idmapper-tls
-    hosts:
-      - idmapper.rcsb.org
-      - idmapper-west.rcsb.org
-      - idmapper-east.rcsb.org
-      - idmapper.west.k8s.rcsb.org
-      - idmapper.east.k8s.rcsb.org
+    - hosts:
+        - idmapper.rcsb.org
+        - idmapper-west.rcsb.org
+        - idmapper-east.rcsb.org
+        - idmapper.west.k8s.rcsb.org
+        - idmapper.east.k8s.rcsb.org
+      secretName: rcsb-idmapper-tls
 
 # Define resource limits for your application. Especially important if you enable autoscaling for this Helm chart.
 # Deploy without limits first to test the application performance, then tune afterwards to ensure that autoscaling
