--- a/k8s/helm/values/production.yaml
+++ b/k8s/helm/values/production.yaml
@@ -58,15 +58,15 @@ service:
 
 ingress:
   enabled: true
-  className: "haproxy"
+  className: haproxy
   annotations:
     cert-manager.io/cluster-issuer: rutgers-acme
+    kubernetes.io/tls-acme: "true"
     # The non-UCSD/Rutgers subnets are for NS1 monitors
     haproxy.org/allow-list: >-
       128.6.158.0/23, 132.249.210.0/24, 132.249.213.0/24, 163.114.226.0/24, 163.114.225.0/24,
       209.177.156.77/32, 147.75.68.120/29, 163.114.227.0/24, 163.114.228.0/24, 163.114.224.0/24, 147.75.66.200/29,
       163.114.230.0/24, 163.114.232.0/24
-  kubernetes.io/tls-acme: "true"
   hosts:
     - host: idmapper.rcsb.org
       paths:
@@ -89,13 +89,13 @@ ingress:
         - path: /
           pathType: ImplementationSpecific
   tls:
-    secretName: rcsb-idmapper-tls
-    hosts:
-      - idmapper.rcsb.org
-      - idmapper-west.rcsb.org
-      - idmapper-east.rcsb.org
-      - idmapper.west.k8s.rcsb.org
-      - idmapper.east.k8s.rcsb.org
+    - hosts:
+        - idmapper.rcsb.org
+        - idmapper-west.rcsb.org
+        - idmapper-east.rcsb.org
+        - idmapper.west.k8s.rcsb.org
+        - idmapper.east.k8s.rcsb.org
+      secretName: rcsb-idmapper-tls
 
 # TODO: Review resource limit values.
 resources: {}
