--- a/k8s/helm/templates/service.yaml
+++ b/k8s/helm/templates/service.yaml
@@ -30,8 +30,9 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ $.Values.service.targetPort }}
+    - port: {{ $.Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
       protocol: TCP
+      name: http
   selector:
     {{- include "helm_chart.selectorLabels" . | nindent 4 }}
