--- a/k8s/helm/values/idmapper.yaml
+++ b/k8s/helm/values/idmapper.yaml
@@ -57,7 +57,7 @@ service:
   targetPort: 8080
 
 ingress:
-  enabled: true
+  enabled: false
   className: haproxy
   annotations:
     cert-manager.io/cluster-issuer: rutgers-acme
