--- a/k8s/helm/values/production.yaml
+++ b/k8s/helm/values/production.yaml
@@ -55,7 +55,7 @@ service:
   targetPort: 8080
 
 ingress:
-  enabled: false
+  enabled: true
   className: haproxy
   annotations:
     cert-manager.io/cluster-issuer: rutgers-acme
